--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -29,7 +29,7 @@ footer.site-footer
               a(href="/") Accomodation
               
         li.section
-          a.nav-title(href="/") Talks
+          a.nav-title(href=pageUrl("talks.html")) Talks
           ul
             li
               a(href="/") Schedule
