--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -11,6 +11,9 @@ $screen-lg: $screen-md;
 
 // Color theme
 
+$twitter-color: #55acee;
+$github-color: #333;
+
 $brand-primary: #1e5493;
 $brand-secondary: #d52034;
 $brand-silent: #d1d1d1;
