--- a/static/scss/pycon/_footer.scss
+++ b/static/scss/pycon/_footer.scss
@@ -5,7 +5,7 @@ $divider-inverted: #527bac;
   clear: both;
   width: 100%;
   height: $footer-height;
-  margin-top: -$footer-height;
+  margin-top: -$footer-height + 80px;
   padding: 1em 0 2em;
   color: $text-inverted;
   background-color: $brand-primary;
