--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -49,7 +49,11 @@ body {
 .viewport {
   min-height: 100%;
   padding-top: $navbar-height;
-  padding-bottom: $footer-height;
+  padding-bottom: 40px;
+
+  @media (min-width: $screen-sm) {
+    padding-bottom: $footer-height;
+  }
 }
 
 .clearfix {
