--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -30,6 +30,7 @@ $navbar-bg: rgba(255, 255, 255, 0.97);
 
 $navbar-height: 60px;
 $footer-height: 280px;
+$offcanvas-navbar-width: 220px;
 
 // Theme overrides
 
