--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -1,31 +1,25 @@
-div
-  header
-    .navbar.navbar-default.navbar-fixed-top
-      //- .navbar-header
-        //- button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#main-navbar", aria-expanded="false")
-        //-   .sr-only Toggle navigation
-        //-   .icon-bar
-        //-   .icon-bar
-        //-   .icon-bar
-        //- a.navbar-brand(href="/"+year+'/') PyCon Cz
-      .collapse.navbar-collapse#top
-        ul.nav.navbar-nav
-          li.about
-            a(href='/'+year+'/#speakers') About
-          li.getting-here
-            a(href='/'+year+'/#schedule') Getting here
-          li.talks
-            a(href=pageUrl("talks.html"))
-              | Talks
-              span.date Saturday 14th
-          li.sprints
-            a(href='/'+year+'/#sponsors')
-              | Sprints &amp; workshops
-              span.date Sunday 15th
-      
-      a(href="/2015/")
-        img.pycon-logo(
-          alt="PyCon CZ",
-          src='/'+year+"/static/images/pycon-cz-logo-icon.svg",
-          onerror="this.onerror = null; this.src = '/2015/static/images/pycon-cz-logo.png'"
-        )
+header#top
+  .navbar
+    button.navbar-toggle(type="button", aria-expanded="false")
+      .fa.fa-bars
+
+    ul.nav.navbar-nav
+      li.about
+        a(href='/'+year+'/#speakers') About
+      li.getting-here
+        a(href='/'+year+'/#schedule') Getting here
+      li.talks
+        a(href=pageUrl("talks.html"))
+          | Talks
+          span.date Saturday 14th
+      li.sprints
+        a(href='/'+year+'/#sponsors')
+          | Sprints &amp; workshops
+          span.date Sunday 15th
+    
+    a(href="/2015/")
+      img.pycon-logo(
+        alt="PyCon CZ",
+        src='/'+year+"/static/images/pycon-cz-logo-icon.svg",
+        onerror="this.onerror = null; this.src = '/2015/static/images/pycon-cz-logo.png'"
+      )
