--- a/static/scss/pycon/_navbar.scss
+++ b/static/scss/pycon/_navbar.scss
@@ -12,60 +12,51 @@ $brand-size: 45px;
   border-bottom: 1px solid $brand-silent;
   background-color: $navbar-bg;
 
+
   .pycon-logo {
     position: absolute;
     top: 50%;
-    left: 50%;
+    right: 0;
     width: $brand-size;
     height: $brand-size;
-    transform: translate(-$brand-size/2 - 5px, -$brand-size/2);
+    transform: translate(-$brand-size/2, -$brand-size/2);
+
+    .home & {
+      display: none;
+    }
+
+    @media (min-width: $screen-xs) {
+      left: 50%;
+    }
   }
 }
 
+.canvas {
+  transition: all .2s ease;
+
+  // .open & {
+  //   transform: translate($offcanvas-navbar-width);
+  // }
+
+  // .overlay {
+  //   position: absolute;
+  //   // top: $navbar-height;
+  //   // right: 0;
+  //   // bottom: 0;
+  //   bottom: 0;
+  //   height: 100%;
+  //   width: 100%;
+  //   z-index: 1000;
+  //   background-color: rgba(0, 0, 0, 0.8);
+  // }
+}
+
 .navbar-nav {
-  // space between items
-  $item-padding: 40px;
-  // enlarged space between middle items (placeholder for brand-logo)
-  $brand-placeholder: 20px + ($item-padding + $brand-size) / 2;
-
-  // shift whole menu right to visualy align it with jumbotron and pycon logo
-  position: relative;
-  left: 35px;
-
+  position: absolute;
+  top: $navbar-height;
   margin: 0;
   padding: 0;
-
-  // asymetric padding to make navbar items in visual middle
-  // (two-lines items shift visualy whole menu a bit up)
-  padding-top: 12px;
-  padding-bottom: 8px;
-  text-align: center;
-
-  li {
-    display: inline-block;
-    margin: 0 $item-padding/2;
-
-    font-size: 18px;
-    line-height: 1.3;
-
-    text-align: left;
-    vertical-align: middle;
-
-    &:after {
-      display: block;
-      width: 0;
-      height: 2px;
-      // margin: auto;
-      content: " ";
-      transition: width .2s ease, background-color .2s ease;
-    }
-
-    &:hover:after {
-      width: 100%;
-      background-color: $brand-secondary;
-      transition: width .4s ease, background-color .4s ease;
-    }
-  }
+  list-style: none;
 
   a {
     color: $text-color;
@@ -77,16 +68,111 @@ $brand-size: 45px;
     }
   }
 
-  .getting-here {
-    margin-right: $brand-placeholder;
-  }
-
-  .talks {
-    margin-left: $brand-placeholder;
-  }
-
   .date {
     display: block;
     font-size: 12px;
+  }
+}
+
+.navbar-toggle {
+  $toggle-size: 36px;
+  position: absolute;
+  top: ($navbar-height - $toggle-size) / 2;
+  left: 10px;
+  width: $toggle-size;
+  height: $toggle-size;
+  padding: 0;
+  border: 1px solid $brand-silent;
+  background-color: $body-bg;
+}
+
+@media (max-width: $screen-xs-max) {
+  .navbar-nav {
+    position: fixed;
+    bottom: 0;
+    width: $offcanvas-navbar-width;
+    border-right: 1px solid $brand-silent;
+    background-color: $body-bg;
+    transform: translateX(-100%);
+    transition: all .2s ease;
+
+    .open & {
+      transform: translateX(0);
+    }
+
+    a {
+      display: block;
+      padding: 15px 10px;
+      border-bottom: 1px solid $brand-silent;
+      color: $text-color;
+      text-decoration: none;
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: $text-inverted;
+        background-color: $brand-primary;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+@media (min-width: $screen-sm) {
+  .navbar-nav {
+    // space between items
+    $item-padding: 40px;
+    // enlarged space between middle items (placeholder for brand-logo)
+    $brand-placeholder: 20px + ($item-padding + $brand-size) / 2;
+
+    position: relative;
+    top: 0;
+    // shift whole menu right to visualy align it with jumbotron and pycon logo
+    left: 35px;
+
+    padding: 0;
+    // asymetric padding to make navbar items in visual middle
+    // (two-lines items shift visualy whole menu a bit up)
+    padding-top: 12px;
+    padding-bottom: 8px;
+    text-align: center;
+
+    li {
+      display: inline-block;
+      margin: 0 $item-padding/2;
+
+      font-size: 18px;
+      line-height: 1.3;
+
+      text-align: left;
+      vertical-align: middle;
+
+      &:after {
+        display: block;
+        width: 0;
+        height: 2px;
+        // margin: auto;
+        content: " ";
+        transition: width .2s ease, background-color .2s ease;
+      }
+
+      &:hover:after {
+        width: 100%;
+        background-color: $brand-secondary;
+        transition: width .4s ease, background-color .4s ease;
+      }
+    }
+
+    .getting-here {
+      margin-right: $brand-placeholder;
+    }
+
+    .talks {
+      margin-left: $brand-placeholder;
+    }
+  }
+
+  .navbar-toggle {
+    display: none;
   }
 }
