--- a/static/scss/pycon/_home.scss
+++ b/static/scss/pycon/_home.scss
@@ -89,7 +89,7 @@
 
     .pycon-location,
     .pycon-date {
-      display: block;
+      display: inline-block;
       padding: 0 20px;
     }
   }
