--- a/static/scss/pycon/_talks.scss
+++ b/static/scss/pycon/_talks.scss
@@ -5,11 +5,7 @@ $commit-line-size: 10px;
   padding: 0;
 
   @media (min-width: $screen-sm) {
-    padding-top: 15px;
-  }
-
-  @media (min-width: $screen-md) {
-    padding-top: 25px;
+    padding-top: 20px;
   }
 }
 
@@ -76,6 +72,7 @@ $commit-line-size: 10px;
   .event {
     @include make-sm-column(6);
     margin-top: 15px;
+
     @media (min-width: $screen-sm) {
       margin-top: 0;
     }
@@ -207,14 +204,13 @@ $commit-line-size: 10px;
   .master & {
     margin-right: 10px;
     margin-left: 0;
-
-    @media (min-width: $screen-xs) {
-      margin-right: 0;
-      margin-left: 10px;
-    }
   }
 
   .practical & {
     margin-right: 10px;
+
+    @media (min-width: $screen-xs) {
+      margin-left: 0;
+    }
   }
 }
