Added Code of Conduct section.

--- a/static/jade/base.jade
+++ b/static/jade/base.jade
@@ -48,7 +48,7 @@ html(lang='en-us')
       }
       
       var $body = $('body');
-      var $closer = $('.viewport, .navbar a');
+      var $closer = $('.viewport, .canvas, .navbar a');
       
       $('.navbar-toggle').click(function(ev) {
         ev.preventDefault();
