--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -16,7 +16,7 @@ footer.site-footer
             li
               a(href="/") Sponsorship
             li
-              a(href="/") #[strong Code of Conduct]
+              a(href=pageUrl("about/code-of-conduct.html")) #[strong Code of Conduct]
               
         li.section
           a.nav-title(href="/") Getting Here
