--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -10,7 +10,7 @@ footer.site-footer
             li
               a(href="/") Event
             li
-              a(href="/") #[strong Tickets]
+              a(href=pageUrl("about/tickets.html")) #[strong Tickets]
             li
               a(href="/") Speakers
             li
@@ -32,7 +32,7 @@ footer.site-footer
           a.nav-title(href=pageUrl("talks.html")) Talks
           ul
             li
-              a(href="/") Schedule
+              a(href=pageUrl("talks.html")) Schedule
             li
               a(href="/") Directions
             li
