Added sponsors page.

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -14,7 +14,7 @@ footer.site-footer
             li
               a(href="/") Speakers
             li
-              a(href="/") Sponsorship
+              a(href=pageUrl("about/sponsorship.html")) Sponsorship
             li
               a(href=pageUrl("about/code-of-conduct.html")) #[strong Code of Conduct]
               
