Added sponsors to homepage.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -46,3 +46,33 @@ block viewport
       p.lead Get your ticket now and be part of the first PyCon CZ!
       .tito
         tito-widget(event="pyvec/pycon-cz-2015")
+  
+    .sponsors
+      h2 Our sponsors
+
+      .platinum
+        h3 Platinum sponsor
+        .sponsor
+          a.sponsor-skypicker(href="https://skypicker.com")
+            img(src="https://cz.skypicker.com/images/about/skypicker-logo.png")
+
+      .gold
+        h3 Gold sponsors
+        .sponsor
+          a.sponsor-psf(href="https://www.python.org/psf/")
+            img(src=pageUrl("/static/images/sponsors/psf.png"))
+        .sponsor
+          a.sponsor-twisto(href="https://www.twisto.cz")
+            img(src=pageUrl("/static/images/sponsors/twisto.jpg"))
+
+      .silver
+        h3 Silver sponsors
+        .sponsor
+          a.sponsor-imper(href="https://imper.cz")
+            img(src=pageUrl("/static/images/sponsors/imper.png"))
+        .sponsor
+          a.sponsor-pycharm(href="https://www.jetbrains.com/pycharm/")
+            img(src=pageUrl("/static/images/sponsors/pycharm.png"))
+        .sponsor
+          a.sponsor-placeholder(href=pageUrl("about/sponsorship.html")).
+            Become our partner!
