Added map of first day venue.

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -34,11 +34,11 @@ footer.site-footer
             li
               a(href=pageUrl("talks.html")) Schedule
             li
-              a(href="/") Directions
-            li
-              a(href="/") #[strong Registration]
-            li
-              a(href="/") #[strong Lightning talks]
+              a(href=pageUrl("talks.html#directions")) Directions
+            //- li
+            //-   a(href="/") #[strong Registration]
+            //- li
+            //-   a(href="/") #[strong Lightning talks]
 
         li.section 
           a.nav-title(href="/") Sprints &amp; Workshops
