--- a/static/jade/components/js.jade
+++ b/static/jade/components/js.jade
@@ -1,8 +1,7 @@
 script(type='text/javascript', src='https://code.jquery.com/jquery-2.1.4.min.js')
 script(type='text/javascript', src='https://maps.google.com/maps/api/js?sensor=true')
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js')
-//- script(type='text/javascript', src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
-//- script(type='text/javascript', src='/'+year+'/static/js/main.min.js')
+script(type='text/javascript', src=pageUrl('/static/js/main.min.js'))
 //- script.
 //-   (function (i, s, o, g, r, a, m) {
 //-     i['GoogleAnalyticsObject'] = r;
