--- a/static/jade/talks.jade
+++ b/static/jade/talks.jade
@@ -105,3 +105,21 @@ block viewport
       
       .commit.empty.last
         .dot
+
+    a.anchor#directions
+    h2 The venue
+    
+    p.lead.
+      The conference is going to be held in Brno University of Technology.
+
+  .map
+    address
+      p.strong VUT FIT
+      p 49°13'34.5"N 16°35'49.0"E
+      p Building D
+      p Božetěchova 1/2
+      p 612 66 Brno
+      p Czech Republic
+      
+
+    #map
