--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -13,7 +13,7 @@ header#top
           | Talks
           span.date Saturday 14th
       li.sprints
-        a(href=pageUrl("sprints-workshops.html"))
+        a(href=pageUrl("workshops/"))
           | Sprints &amp; workshops
           span.date Sunday 15th
     
