--- a/static/jade/talks.jade
+++ b/static/jade/talks.jade
@@ -115,11 +115,10 @@ block viewport
   .map
     address
       p.strong VUT FIT
-      p 49°13'34.5"N 16°35'49.0"E
+      p 49°11'25.8"N 16°37'13.1"E
       p Building D
       p Božetěchova 1/2
       p 612 66 Brno
       p Czech Republic
-      
 
-    #map
+    #map.vut
