--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -3,16 +3,16 @@ footer.site-footer
     nav
       ul.nav-footer
         li.section
-          a.nav-title(href="/") About
+          a.nav-title(href=pageUrl("#")) About
           ul
-            li
-              a(href="/") Team
-            li
-              a(href="/") Event
+            //- li
+            //-   a(href="/") Team
+            //- li
+            //-   a(href="/") Event
             li
               a(href=pageUrl("about/tickets.html")) #[strong Tickets]
-            li
-              a(href="/") Speakers
+            //- li
+            //-   a(href="/") Speakers
             li
               a(href=pageUrl("about/sponsorship.html")) Sponsorship
             li
