Added social links to footer.

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -19,16 +19,6 @@ footer.site-footer
               a(href=pageUrl("about/code-of-conduct.html")) #[strong Code of Conduct]
               
         li.section
-          a.nav-title(href="/") Getting Here
-          ul
-            li
-              a(href="/") Venue
-            li
-              a(href="/") Transport
-            li
-              a(href="/") Accomodation
-              
-        li.section
           a.nav-title(href=pageUrl("talks.html")) Talks
           ul
             li
@@ -49,6 +39,29 @@ footer.site-footer
               a(href=pageUrl("workshops/#directions")) Directions
             //- li
             //-   a(href=pageUrl("workshops/registration.html")) #[strong Registration]
+            
+        li.section
+          .social-links
+            | Spread the word about #[strong PyCon CZ!]
+            ul
+              li
+                a(href='https://twitter.com/pyconcz')
+                  i.fa.fa-twitter
+              li
+                a(href='https://www.facebook.com/events/1624916497723396/')
+                  i.fa.fa-facebook
+              li
+                a(href='http://lanyrd.com/2015/pyconcz/')
+                  i.fa.fa-calendar-check-o
+              li
+                a(href='https://github.com/pyvec/cz.pycon.org-2015')
+                  i.fa.fa-github
+              li
+                a(href='https://pyconcz.slack.com')
+                  i.fa.fa-slack
+              li
+                a(href='mailto:info@pycon.cz')
+                  i.fa.fa-envelope
 
     .psf-trademark
       p
@@ -56,26 +69,3 @@ footer.site-footer
           [PyCon™](href='https://www.python.org/psf/trademarks/pycon/') 
           is a trademark for worldwide conference activities claimed by
           [Python Software foundation](href='https://www.python.org/psf-landing/').
-
-
-//
-//- .social
-//-   ul.right.nav
-//-     li
-//-       a(href='https://twitter.com/pyconcz')
-//-         i.fa.fa-twitter
-//-     li
-//-       a(href='https://www.facebook.com/events/1624916497723396/')
-//-         i.fa.fa-facebook
-//-     li
-//-       a(href='http://lanyrd.com/2015/pyconcz/')
-//-         i.fa.fa-calendar-check-o
-//-     li
-//-       a(href='https://github.com/pyvec/cz.pycon.org-2015')
-//-         i.fa.fa-github
-//-     li
-//-       a(href='https://pyconcz.slack.com')
-//-         i.fa.fa-slack
-//-     li
-//-       a(href='mailto:info@pycon.cz')
-//-         i.fa.fa-envelope
