--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -29,7 +29,8 @@ $navbar-bg: rgba(255, 255, 255, 0.97);
 // Dimensions
 
 $navbar-height: 60px;
-$footer-height: 280px;
+// $footer-height: 300px; // uncomment when getting-here section is published
+$footer-height: 220px;
 $offcanvas-navbar-width: 220px;
 
 // Theme overrides
