--- a/static/jade/components/js.jade
+++ b/static/jade/components/js.jade
@@ -2,18 +2,18 @@ script(type='text/javascript', src='https://code.jquery.com/jquery-2.1.4.min.js'
 script(type='text/javascript', src='https://maps.google.com/maps/api/js?sensor=true')
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js')
 script(type='text/javascript', src=pageUrl('/static/js/main.min.js'))
-//- script.
-//-   (function (i, s, o, g, r, a, m) {
-//-     i['GoogleAnalyticsObject'] = r;
-//-     i[r] = i[r] || function () {
-//-         (i[r].q = i[r].q || []).push(arguments)
-//-       }, i[r].l = 1 * new Date();
-//-     a = s.createElement(o),
-//-       m = s.getElementsByTagName(o)[0];
-//-     a.async = 1;
-//-     a.src = g;
-//-     m.parentNode.insertBefore(a, m)
-//-   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-//- 
-//-   ga('create', 'UA-62652331-2', 'auto');
-//-   ga('send', 'pageview');
+script.
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+  ga('create', 'UA-62652331-2', 'auto');
+  ga('send', 'pageview');
