Moved talks to subdirectory.

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -19,12 +19,12 @@ footer.site-footer
               a(href=pageUrl("about/code-of-conduct.html")) #[strong Code of Conduct]
               
         li.section
-          a.nav-title(href=pageUrl("talks.html")) Talks
+          a.nav-title(href=pageUrl("talks/")) Talks
           ul
             li
-              a(href=pageUrl("talks.html")) Schedule
+              a(href=pageUrl("talks/")) Schedule
             li
-              a(href=pageUrl("talks.html#directions")) Directions
+              a(href=pageUrl("talks/#directions")) Directions
             //- li
             //-   a(href="/") #[strong Registration]
             //- li
