--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -12,7 +12,7 @@ header#top
         a(href=pageUrl("about/tickets.html"))
           | Tickets
       li.talks
-        a(href=pageUrl("talks.html"))
+        a(href=pageUrl("talks/"))
           | Talks
           span.date Saturday 14th
       li.sprints
