Added link to tickets.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -43,7 +43,7 @@ block viewport
     
     .registration
       h2 Registration is now open
-      p.lead Get your ticket now and be part of the first PyCon CZ!
+      p.lead #[a(href=pageUrl("about/tickets.html")) Get your ticket] now and be part of the first PyCon CZ!
       .tito
         tito-widget(event="pyvec/pycon-cz-2015")
   
