Updated avatars and talks titles according to speaker requests.

--- a/static/jade/talks/index.jade
+++ b/static/jade/talks/index.jade
@@ -48,9 +48,9 @@ block viewport
         )
 
     .event-full
-      h2.title Keynote #2 #[br] Funding of open-source projects
+      h2.title Keynote #2 #[br] The secret sauce behind Open Source
       .talk-description
-        .speaker Russel-Keith Maggee
+        .speaker Russell-Keith Maggee
         p.
           Dr Russell Keith-Magee is a 9 year veteran of the Django core team,
           and President of the Django Software Foundation.
