--- a/static/jade/talks/index.jade
+++ b/static/jade/talks/index.jade
@@ -39,7 +39,11 @@ block viewport
         .speaker Amber Brown
         p.
           Amber, better known as HawkOwl, is a core developer and release
-          manager of the Twisted project. 
+          manager of the Twisted project.
+        a.social.github(href="https://github.com/hawkowl")
+          .fa.fa-github
+        a.social.twitter(href="https://twitter.com/hawkieowl")
+          .fa.fa-twitter
          
       .commit
         img.avatar(
@@ -48,12 +52,16 @@ block viewport
         )
 
     .event-full
-      h2.title Keynote #2 #[br] The secret sauce behind Open Source
+      h2.title.russell Keynote #2 #[br] The secret sauce behind #[br] Open Source
       .talk-description
         .speaker Russell-Keith Maggee
         p.
           Dr Russell Keith-Magee is a 9 year veteran of the Django core team,
-          and President of the Django Software Foundation.
+          and President of the DSF.
+        a.social.github(href="https://github.com/freakboy3742")
+          .fa.fa-github
+        a.social.twitter(href="https://twitter.com/freakboy3742")
+          .fa.fa-twitter
          
       .commit
         img.avatar(
